--- a/PhantasmaMail/PhantasmaMail/App.xaml
+++ b/PhantasmaMail/PhantasmaMail/App.xaml
@@ -195,6 +195,7 @@
             </Style>
 
             <Style x:Key="SwitchBarLabelStyle" TargetType="Label">
+                <Setter Property="TextColor" Value="{StaticResource LightGray}"/>
                 <Setter Property="FontSize" Value="{StaticResource LargeSize}" />
                 <Setter Property="FontFamily" Value="{StaticResource OpenSansSemiBold}" />
             </Style>
