--- a/PhantasmaMail/PhantasmaMail/Controls/InboxMessageCell.xaml
+++ b/PhantasmaMail/PhantasmaMail/Controls/InboxMessageCell.xaml
@@ -6,7 +6,7 @@
     xmlns:effects="clr-namespace:PhantasmaMail.Effects"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
     x:Key="InboxMessageCell">
-    <Frame Margin="20,10">
+    <Frame Margin="20,10" CornerRadius="8">
         <Grid RowSpacing="7" ColumnSpacing="0" Margin="3,3">
             <Grid.RowDefinitions>
                 <RowDefinition Height="Auto" />
@@ -15,25 +15,25 @@
                 <RowDefinition Height="Auto" />
             </Grid.RowDefinitions>
             <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="10" />
+                <!--<ColumnDefinition Width="10" />-->
                 <ColumnDefinition Width="*" />
                 <ColumnDefinition Width="Auto" />
             </Grid.ColumnDefinitions>
 
             <Label Grid.Row="0"
-                   Grid.Column="1"
+                   Grid.Column="0"
                    Text="{Binding Subject}"
                    Style="{StaticResource MessageTitleStyle}" />
 
             <Label Grid.Row="0"
-                   Grid.Column="2"
+                   Grid.Column="1"
                    Text="{Binding Date, StringFormat='{0:dd/MM/yyyy}'}"
                    HorizontalOptions="End"
                    Style="{StaticResource MessageTextStyle}" 
                    FontSize="{StaticResource LittleSize}"/>
 
             <Label Grid.Row="1"
-                   Grid.Column="1"
+                   Grid.Column="0"
                    Grid.ColumnSpan="2"
                    Text="{Binding TextContent}"
                    Style="{StaticResource MessageTextStyle}">
@@ -43,19 +43,21 @@
             </Label>
 
             <BoxView Grid.Row="2"
-                     Grid.Column="1"
+                     Grid.Column="0"
                      Grid.ColumnSpan="2"
                      BackgroundColor="{StaticResource SeparatorGray}" />
 
             <Label Grid.Row="3"
-                   Grid.Column="1"
+                   Grid.Column="0"
+                   Grid.ColumnSpan="2"
                    Text="{Binding FromAddress}"
+                   HorizontalTextAlignment="End"
                    Style="{StaticResource MessageSenderStyle}" />
 
-            <Label Grid.Row="3"
+            <!--<Label Grid.Row="3"
                    Grid.Column="2"
                    Text="{Binding ToAddress}"
-                   Style="{StaticResource MessageSenderStyle}" />
+                   Style="{StaticResource MessageSenderStyle}" />-->
         </Grid>
     </Frame>
 </Grid>
