--- a/PhantasmaMail/PhantasmaMail/Views/ExtendedSplashView.xaml
+++ b/PhantasmaMail/PhantasmaMail/Views/ExtendedSplashView.xaml
@@ -2,19 +2,13 @@
 <ContentPage
     x:Class="PhantasmaMail.Views.ExtendedSplashView"
     xmlns="http://xamarin.com/schemas/2014/forms"
-    xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml">
+    xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+    xmlns:ffimageloading="clr-namespace:FFImageLoading.Forms;assembly=FFImageLoading.Forms">
     <ContentPage.Content>
         <Grid>
-            <StackLayout>
-                <Label
-                    HorizontalOptions="CenterAndExpand"
-                    Text="Welcome to Xamarin.Forms!"
-                    VerticalOptions="CenterAndExpand" />
-            </StackLayout>
-            <ActivityIndicator
-                IsRunning="{Binding IsBusy}"
-                IsVisible="{Binding IsBusy}"
-                Color="Red" />
+            <ffimageloading:CachedImage Aspect="AspectFill" Source="Splash_screen.ong">
+
+            </ffimageloading:CachedImage>
         </Grid>
     </ContentPage.Content>
 </ContentPage>
